# memryx-acceleration

./: README.md
runtime-src/: CMakeLists.txt
runtime-src/include/: runtime_core.hpp  runtime_ioinfo.hpp  runtime_utils.hpp  yyjson.h
runtime-src/src/: main.cpp  runtime_core.cpp  runtime_ioinfo.cpp  runtime_utils.cpp  yyjson.c
toolchain-src/: Dockerfile  build-toolchain.sh  requirements.txt  setup.py
toolchain-src/conversion_block/: logger.py  main.py  utils.py
toolchain-src/src/: run-block.sh
